@startuml Problem_Analysis_Email_Service
!theme aws-orange
title Email Service Integration Problems - Detailed Analysis

package "Current Email Service Code" {
    class EmailService {
        - sendgrid_api_key: str
        - jwt_secret: str
        - db_service: DatabaseService
        
        + send_editor_notification() -> Dict
        + _generate_approval_token() -> str
        + _log_email_send() -> None
        + _update_invoice_after_email_send() -> None
    }
    
    note right of EmailService
        **PROBLEM 1: Database Method Missing**
        Line 508: await db_service.execute_query()
        
        **ERROR:** 'DatabaseService' object has 
        no attribute 'execute_query'
        
        **CAUSE:** DatabaseService uses Supabase client,
        not raw SQL queries
    end note
}

package "Current Database Service" {
    class DatabaseService {
        - _client: Client (Supabase)
        - table_name: str = "invoices_clean"
        
        + create_invoice(data) -> Dict
        + get_invoice(id) -> Dict
        + update_invoice(id, data) -> Dict
        + delete_invoice(id) -> Dict
        + get_dropdown_options() -> Dict
        
        ❌ execute_query() -> NOT IMPLEMENTED
    }
    
    note right of DatabaseService
        **Available Methods:**
        - Uses Supabase client.table().insert()
        - Uses Supabase client.table().select()
        - Uses Supabase client.table().update()
        
        **Missing Methods:**
        - execute_query() for raw SQL
        - Raw SQL for approval_tokens table
        - Raw SQL for email_audit_log table
    end note
}

package "Missing Database Tables" {
    class "approval_tokens ❌" as ApprovalTokens {
        **Table NOT EXISTS in current schema**
        
        Expected fields:
        - id: UUID
        - token_hash: str
        - invoice_id: UUID
        - action: str
        - user_email: str
        - expires_at: timestamp
        - nonce: str
    }
    
    class "email_audit_log ❌" as EmailAuditLog {
        **Table NOT EXISTS in current schema**
        
        Expected fields:
        - id: UUID
        - invoice_id: UUID
        - email_type: str
        - recipient_email: str
        - subject: str
        - send_success: bool
        - provider_message_id: str
        - template_used: str
    }
}

package "SSL/Certificate Issues" {
    class "SendGrid Connection" as SGConnection {
        **PROBLEM 2: SSL Certificate Error**
        
        Error: [SSL: CERTIFICATE_VERIFY_FAILED] 
        certificate verify failed: self-signed 
        certificate in certificate chain
        
        **CAUSE:** macOS SSL certificate issues
        with Python urllib/requests
    }
    
    note right of SGConnection
        **Solutions:**
        1. Use SendGrid Python SDK properly
        2. Install/update certificates
        3. Use SMTP fallback
        4. Configure SSL context
    end note
}

' Problem relationships
EmailService --> DatabaseService : ❌ calls execute_query()
EmailService --> ApprovalTokens : ❌ tries to INSERT
EmailService --> EmailAuditLog : ❌ tries to INSERT
EmailService --> SGConnection : ❌ SSL fails

' Error flow
object "Error Flow" as ErrorFlow {
    **1. Email Service starts**
    ✅ Template rendering works
    ✅ HTML generation works
    
    **2. Database operations fail**
    ❌ execute_query() method missing
    ❌ approval_tokens table missing
    ❌ email_audit_log table missing
    
    **3. SendGrid connection fails**
    ❌ SSL certificate verification
    ❌ Falls back to SMTP
    ❌ SMTP also has issues
    
    **4. Result**
    ❌ Email not sent
    ❌ No audit logging
    ❌ No approval tokens
}

package "Required Fixes" {
    class "Fix 1: Database Methods" as Fix1 {
        **Add missing methods to DatabaseService:**
        + execute_raw_sql(query, params) -> Any
        + create_approval_token(data) -> str
        + log_email_attempt(data) -> None
        + get_approval_token(token_hash) -> Dict
    }
    
    class "Fix 2: Database Schema" as Fix2 {
        **Apply missing tables:**
        + approval_tokens table
        + email_audit_log table
        + security_audit_log table
        + email_templates table
    }
    
    class "Fix 3: SSL/SendGrid" as Fix3 {
        **Fix email provider issues:**
        + Install certificates
        + Use SendGrid SDK properly
        + Configure SSL context
        + Test SMTP fallback
    }
    
    class "Fix 4: Simplified Test" as Fix4 {
        **Create working test:**
        + Bypass database logging temporarily
        + Test SendGrid/SMTP directly
        + Verify email delivery
        + Add database features incrementally
    }
}

' Fix dependencies
Fix1 --> EmailService : enables
Fix2 --> Fix1 : requires
Fix3 --> EmailService : enables
Fix4 --> Fix3 : validates

note bottom of Fix4
    **Priority Order:**
    1. Fix SSL/SendGrid (Fix 3)
    2. Create simple test (Fix 4)
    3. Add database methods (Fix 1)
    4. Apply schema changes (Fix 2)
    5. Full integration test
end note

@enduml
